--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <!-- video area -->
         <div class="video-area">
             <video id="promo-video2" class="video" autoplay="" loop="" muted="" playsinline="" poster="videos/promo.jpg" controls="" __idm_id__="350651393" width="100%" height="">
-                <source src="video/GIF%20photo%201%20Rev%20.mp4" type="video/mp4">
-                <source src="video/GIF%20photo%201%20Rev%20.mp4" type="video/mp4">
+                <source src="video/1.mp4" type="video/mp4">
+                <source src="video/1.mp4" type="video/mp4">
                 Your browser doesn't support HTML5 video.</video>
         </div>
         <!-- end video area -->
